--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 * {
   color: #33272a;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 body {
@@ -31,10 +31,44 @@ h1 {
   margin-bottom: 100px;
 }
 
+button {
+  /* Variables */
+  --button_radius: 0.75em;
+  --button_color: #e8e8e8;
+  --button_outline_color: #000000;
+  font-size: 17px;
+  font-weight: bold;
+  border: none;
+  border-radius: var(--button_radius);
+  background: var(--button_outline_color);
+}
+
+.button_top {
+  display: block;
+  box-sizing: border-box;
+  border: 2px solid var(--button_outline_color);
+  border-radius: var(--button_radius);
+  padding: 0.75em 1.5em;
+  background: var(--button_color);
+  color: var(--button_outline_color);
+  transform: translateY(-0.2em);
+  transition: transform 0.1s ease;
+}
+
+button:hover .button_top {
+  /* Pull the button upwards when hovered */
+  transform: translateY(-0.33em);
+}
+
+button:active .button_top {
+  /* Push the button downwards when pressed */
+  transform: translateY(0);
+}
+
 table {
   width: 50%;
   border-collapse: collapse;
-  font-family: Arial, sans-serif;  
+  font-family: Arial, sans-serif;
 }
 
 thead th {
@@ -47,7 +81,11 @@ th {
   text-align: left;
   border: 3px solid #000;
   width: 100px;
-  background: linear-gradient(135deg, rgbe(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+  background: linear-gradient(
+    135deg,
+    rgbe(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0)
+  );
 }
 
 tbody tr:hover {
@@ -55,7 +93,8 @@ tbody tr:hover {
 }
 
 .table-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
